arrays are filled out and randomizing need button

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <div>Sex:<span = id = 'sex'></span></div>
-    <div>Age:</div>
-    <div>Height:</div>
-    <div>Skin tone:</div>
-    <div>Pelt Tone:</div>
-    <div>Hair Color:</div>
-    <div>Hair Texture:</div>
-    <div>Marking 1 (white markings):</div>
-    <div>Marking 2 (other):</div> 
+    <div>Age:<span = id = 'age'></span></div>
+    <div>Height:<span = id = 'height'></span></div>
+    <div>Skin tone:<span = id = 'skin'></span></div>
+    <div>Pelt Tone:<span = id = 'pelt'></span></div>
+    <div>Hair Color:<span = id = 'hair-color'></span></div>
+    <div>Hair Texture:<span = id = 'hair-texture'></span></div>
+    <div>Marking 1 (white markings):<span = id = 'marking1'></span></div>
+    <div>Marking 2 (other):<span = id = 'marking2'></span></div> 
     
     
 
