added a button to randomize arrays

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div>Hair Texture:<span = id = 'hair-texture'></span></div>
     <div>Marking 1 (white markings):<span = id = 'marking1'></span></div>
     <div>Marking 2 (other):<span = id = 'marking2'></span></div> 
+    <input type="button" id="btnSearch" value="Randomize" onclick="randomizer();" />
     
     
 
