--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div>Sex:<span = id = 'sex'></span></div>
-    <div>Age:<span = id = 'age'></span></div>
-    <div>Height:<span = id = 'height'></span></div>
-    <div>Skin tone:<span = id = 'skin'></span></div>
-    <div>Pelt Tone:<span = id = 'pelt'></span></div>
-    <div>Hair Color:<span = id = 'hair-color'></span></div>
-    <div>Hair Texture:<span = id = 'hair-texture'></span></div>
-    <div>Marking 1 (white markings):<span = id = 'marking1'></span></div>
-    <div>Marking 2 (other):<span = id = 'marking2'></span></div> 
+    <div class ='char-info'>
+    <div>Sex:<span id = 'sex'></span></div>
+    <div>Age:<span id = 'age'></span></div>
+    <div>Height:<span id = 'height'></span></div>
+    <div>Skin tone:<span id = 'skin'></span></div>
+    <div>Pelt Tone:<span id = 'pelt'></span></div>
+    <div>Hair Color:<span id = 'hair-color'></span></div>
+    <div>Hair Texture:<span id = 'hair-texture'></span></div>
+    <div>Marking 1 (white markings):<span id = 'marking1'></span></div>
+    <div>Marking 2 (other):<span id = 'marking2'></span></div> 
     <input type="button" id="btnSearch" value="Randomize" onclick="randomizer();" />
     
-    
+</div>
 
 
 
